<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center"
    android:orientation="vertical">



    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:textSize="20sp"
        android:text="@string/add_contacts_text1"
        android:fontFamily="sans-serif"
        />
    <EditText
        android:id="@+id/editName"
        android:hint="@string/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:layout_margin="10dp"

        />
    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_phone"
        android:layout_margin="10dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp">


        <Button
            android:id="@+id/button_cancel"
            android:layout_width="185dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/btn_cancel"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/btn_add"

            android:textSize="20sp"

            />

    </LinearLayout>


</LinearLayout>