<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivityContacts"

    android:padding="5dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/contacts"

        android:textSize="20sp"
        android:fontFamily="sans-serif"
        />

    <ListView
        android:id="@+id/listContacts"
        android:layout_width="match_parent"
        android:layout_height="467dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingHorizontal="1dp"
        android:paddingTop="1dp">

        <Button
            android:id="@+id/buttonAddContact"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            android:text="@string/add_contact" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/exit_app" />
    </LinearLayout>

</LinearLayout>